--------------------------------------------------------------------------------
yulian5 2025-11-07 23:50:00-00:00 - build 6588

1. Fixed copy counter for skipped folders

--------------------------------------------------------------------------------
drkns 2025-11-07 20:23:20+00:00 - build 6587

1. gh-1040: Add support for zstd archives.

--------------------------------------------------------------------------------
yjh 2025-11-06 00:27:37+03:00 - build 6586

1. SQLite: v3.51.0

--------------------------------------------------------------------------------
drkns 2025-11-04 17:37:42+00:00 - build 6585

1. Add RegExpStatus::StructSize.
   Just in case if we ever decide to extend it, e.g. with localized diagnostics.

--------------------------------------------------------------------------------
w17 2025-11-04 18:20:17+03:00 - build 6584

1. RegExpControl: + RECTL_GETSTATUS

--------------------------------------------------------------------------------
drkns 2025-11-03 21:13:53+00:00 - build 6583

1. Fix debug build.

2. Fix substitution in far:regex.

--------------------------------------------------------------------------------
w17 2025-11-03 23:54:45+03:00 - build 6582

1. Recover $$ -> $ rule in regex substutution

--------------------------------------------------------------------------------
w17 2025-11-03 20:52:30+03:00 - build 6581

1. Allow \{group_number} backreference in regex pattern.

2. Allow ${group_number} in regex replace (if named group was not found).

--------------------------------------------------------------------------------
drkns 2025-11-02 22:05:07+00:00 - build 6580

1. Correction of 6421.3.

--------------------------------------------------------------------------------
drkns 2025-11-01 19:50:42+00:00 - build 6579

1. gh-1036: Suppress elevation requests when scanning %path% for executables.

--------------------------------------------------------------------------------
shmuel 2025-10-25 17:09:40+03:00 - build 6578
