@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------
+drkns 2025-11-08 19:25:50+00:00 - build 6589
+
+1. gh-1042: Show file name in local user menu title.
+
+--------------------------------------------------------------------------------
 yulian5 2025-11-07 23:50:00-00:00 - build 6588
 
 1. Fixed copy counter for skipped folders
